[package]
name = "dauntless"
version = "0.1.0"
edition = "2021"

[dependencies]
arc-swap = "1.8.0"
ndarray = { version = "0.16.1", features = ["rayon"] }
once_cell = "1.21.3"
rayon = "1.11.0"
serde = { version = "1.0.228", optional = true, features = ["derive"] }

[dev-dependencies]
image = "0.25.6"
opencv = "0.97.2"

[features]
serde = ["dep:serde"]
