[package]
name = "dauntless"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = { version = "1.11.0", optional = true }
serde = { version = "1.0.228", optional = true, features = ["derive"] }

[dev-dependencies]
image = "0.25.6"
opencv = "0.97.2"

[features]
rayon = ["dep:rayon"]
serde = ["dep:serde"]
